# restconf

./: .gitignore  Dockerfile  README.md  docker-compose.yml  library.json  pyproject.toml  requirements.txt
app/: restconf.py  rpc_handler.py  server.py  yang_manager.py
yang_modules/: jukebox.yang
