[tool.poetry]
name = "app"
version = "0.1.0"
description = "RESTCONF server on FastAPI"
authors = ["Alex Worker <alex_worker10@mail.ru>"]
readme = "README.md"

packages = [
    { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
redis = "^6.4.0"
yangson = "^1.6.3"
python-dotenv = "^1.1.1"
dotenv = "^0.9.9"
pyang = "^2.7.1"
jsonschema = "^4.25.1"

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"

[tool.ruff]
line-length = 88
target-version = "py39"
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
